@@ -321,12 +321,19 @@ hildon_app_menu_set_columns                     (HildonAppMenu *menu,
 }
 
 static void
-parent_window_hidden                           (HildonWindow *parent_win,
+parent_window_topmost_notify                   (HildonWindow *parent_win,
                                                 GParamSpec   *arg1,
                                                 GtkWidget    *menu)
 {
     if (!hildon_window_get_is_topmost (parent_win))
         gtk_widget_hide (menu);
+}
+
+static void
+parent_window_unmapped                         (HildonWindow *parent_win,
+                                                GtkWidget    *menu)
+{
+    gtk_widget_hide (menu);
 }
 
 void G_GNUC_INTERNAL
@@ -341,12 +348,16 @@ hildon_app_menu_set_parent_window              (HildonAppMenu *self,
     priv = HILDON_APP_MENU_GET_PRIVATE(self);
 
     /* Disconnect old handlers, if any */
-    if (priv->parent_window)
-        g_signal_handlers_disconnect_by_func (priv->parent_window, parent_window_hidden, self);
+    if (priv->parent_window) {
+        g_signal_handlers_disconnect_by_func (priv->parent_window, parent_window_topmost_notify, self);
+        g_signal_handlers_disconnect_by_func (priv->parent_window, parent_window_unmapped, self);
+    }
 
     /* Connect a new handler */
-    if (parent_window)
-        g_signal_connect (parent_window, "notify::is-topmost", G_CALLBACK (parent_window_hidden), self);
+    if (parent_window) {
+        g_signal_connect (parent_window, "notify::is-topmost", G_CALLBACK (parent_window_topmost_notify), self);
+        g_signal_connect (parent_window, "unmap", G_CALLBACK (parent_window_unmapped), self);
+    }
 
     priv->parent_window = parent_window;
 
@@ -826,8 +837,10 @@ hildon_app_menu_finalize                        (GObject *object)
 {
     HildonAppMenuPrivate *priv = HILDON_APP_MENU_GET_PRIVATE(object);
 
-    if (priv->parent_window)
-        g_signal_handlers_disconnect_by_func (priv->parent_window, parent_window_hidden, object);
+    if (priv->parent_window) {
+        g_signal_handlers_disconnect_by_func (priv->parent_window, parent_window_topmost_notify, object);
+        g_signal_handlers_disconnect_by_func (priv->parent_window, parent_window_unmapped, object);
+    }
 
     if (priv->transfer_window)
         gdk_window_destroy (priv->transfer_window);
